--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -77,3 +77,41 @@ input{
 .js-load-more.is-hidden {
   display: none;
 }
+
+img{
+  width: 459px;
+  height: 310px;
+  display: block;
+}
+
+.gallery{
+  margin-top: 40px;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: flex-start;
+  justify-content: center;
+  align-items: flex-end;
+  gap: 20px;
+}
+
+ul{
+  list-style: none;
+  display: flex;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding: 0;
+  gap: 20px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+
+p{
+  margin: 0;
+  font-size: 14px;
+}
+
+.photo-card{
+background: rgba(255, 255, 255, 0.15);
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
