--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -116,3 +116,23 @@ p{
 background: rgba(255, 255, 255, 0.15);
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
+
+.back-to-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  width: 50px;
+  height: 50px;
+  background-color:#a0a4abb8;
+  border: none;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 50px;
+  cursor: pointer;
+  display: none;
+  transition: opacity 0.3s ease-in-out; 
+}
+
+.back-to-top.show {
+  display: block;
+}
